platform/k8s/apps/base/client-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: dev
spec:
  selector:
    app: client-service
  ports:
    - name: http
      port: 80
      targetPort: http
