platform/k8s/apps/base/log-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-service
  namespace: dev
spec:
  selector:
    app: log-service
  ports:
    - name: http
      port: 80
      targetPort: http
