platform/k8s/apps/base/log-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log
  namespace: dev
spec:
  selector:
    app: log
  ports:
    - name: http
      port: 80
      targetPort: http
