platform/k8s/apps/base/transaction-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: dev
spec:
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 80
      targetPort: http
