platform/k8s/apps/base/transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction
  namespace: dev
spec:
  selector:
    app: transaction
  ports:
    - name: http
      port: 80
      targetPort: http
