platform/k8s/apps/base/transactions-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
  namespace: dev
spec:
  selector:
    app: transactions-service
  ports:
    - name: http
      port: 80
      targetPort: http
