platform/k8s/apps/base/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: dev
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 80
      targetPort: http
